# opt-outta-app

./: .gitignore  CLAUDE.md  index.html  opt-outta-app-README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
registry/: brokers.json
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  crypto.rs  engine.rs  history.rs  lib.rs  local_playbooks.rs  main.rs  models.rs  playbook_api.rs  playbook_validation.rs  playbook_verification.rs  recorder.rs  registry_cache.rs  secrets.rs  submission_tracker.rs
src-tauri/src/commands/: brokers.rs  history.rs  mod.rs  optout.rs  playbooks.rs  profile.rs
src/assets/: main.css
src/components/: AppSidebar.vue  OptOutRunner.vue  PlaybookRecorder.vue  RunConfirmModal.vue  StatusBadge.vue  UserActionModal.vue
src/components/ui/dialog/: DialogScrollContent.vue
src/router/: index.ts
src/stores/: brokers.ts  history.ts  optout.ts  playbooks.ts  profile.ts  theme.ts
src/types/: index.ts
src/views/: DashboardView.vue  HistoryView.vue  PlaybookDetailView.vue  PlaybooksView.vue  ProfileView.vue  SettingsView.vue
