[package]
name = "opt-outta"
version = "0.1.18"
description = "Automated data broker opt-out requests"
authors = ["Daring Designs"]
edition = "2021"

[lib]
name = "opt_outta_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
thiserror = "2"
chromiumoxide = { version = "0.8", features = ["tokio-runtime"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
hostname = "0.4"
tauri-plugin-process = "2.3.1"
